fix: D2_FloatContainer: Change z-index

--- a/web/css/D2_FloatContainer.css
+++ b/web/css/D2_FloatContainer.css
@@ -1,6 +1,6 @@
 .d2-float-container {
   position: fixed;
-  z-index: 2000;
+  z-index: 1000;
 }
 
 .d2-float-container__frame {
